# source-distiller

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
agents/: openai.yaml
demo/: record.sh
docs/: protocol.md
examples/: agent_grounding.md  quick_start.sh
references/: protocol.md  research-basis.md
scripts/: evaluate_source_distiller.py  source_distiller.py  source_inventory.py
src/source_distiller/: __init__.py  __main__.py  cli.py  evaluate.py
tests/: test_cli.py
