[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "source-distiller"
version = "0.1.0"
description = "Zero-hallucination citation engine for multi-document research. NotebookLM-style grounding in your terminal."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Emir Oktay"},
]
keywords = [
    "rag", "citation", "grounding", "retrieval", "research",
    "notebooklm", "hallucination", "fact-checking", "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
]

[project.optional-dependencies]
pdf = ["pypdf>=3.0"]
dev = ["pytest>=7.0", "pypdf>=3.0"]

[project.scripts]
source-distiller = "source_distiller.cli:main"

[project.urls]
Homepage = "https://github.com/emiroktay1/source-distiller"
Repository = "https://github.com/emiroktay1/source-distiller"
Issues = "https://github.com/emiroktay1/source-distiller/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
